tests/fail/infinite-struct.ct
record A {
    b: B
}

record B {
    a: A
}